@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Optimization to avoid re-parsing test profile definition multiple times
+
 Phoronix Test Suite 10.2.2
 17 February 2021
 
